# mate-rov-2026-gui

./: .gitignore  README.md  justfile  pyproject.toml
scripts/: joystick.py  joystick_visualizer.py  pvc_blender_addon.py  pysticks.py  test_gstreamer_mobile.py  test_gstreamer_mobile_2.py
src/rov_gui/: Float.py  __init__.py  camera_widgets.py  config.py  copilot.py  crab_detection_gui.py  depth_estimation_gui.py  edna_gui.py  engineer.py  frozen_crab_detection_gui.py  gui_backend.py  info_sheet_input.py  landingPage.py  main.py  pilot.py  stylesheet.py  utils.py
