[project]
name = "rov-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "omar-abdelgawad", email = "omar.abdelgawad@ejust.edu.eg" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rov-gui = "rov_gui:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
