[project]
name = "rov-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "omar-abdelgawad", email = "omar.abdelgawad@ejust.edu.eg" }
]
requires-python = ">=3.12"
dependencies = [
    "crab-detection",
    "information-sheet-problem",
    "paramiko>=4.0.0",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "screeninfo>=0.8.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.scripts]
rov-gui = "rov_gui:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
information-sheet-problem = { git = "https://github.com/ejustroboticsclub/mate-rov-2026-information-sheet-problem", tag = "v3" }
crab-detection = { git = "https://github.com/ejustroboticsclub/mate-rov-2026-crab-detection", tag = "v4" }
